No effective change whatsoever :D

--- a/attributes-project.css
+++ b/attributes-project.css
@@ -31,3 +31,15 @@ p.more {
 }
 
 /* Write your CSS here. */
+
+*{font-family: "helvetica neue", "helvetica", sans-serif;
+background-color: Whitesmoke;
+color: #464646;}
+
+a{text-decoration: remove underline;}
+
+ul{padding:0;}
+
+li>ul{list-style: none;}
+
+a > a span :hover :link {color:#800080;}
